# ghost

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  README.md  TASKS.json  TASKS.md  critiques1.txt  notes4.txt  paper22.txt  push-to-github.sh  pyproject.toml  roadmap.txt  start.bat  start.sh
.github/workflows/: ci.yml
agents/: __init__.py  training_agent.py
deploy/: README.md
src/ghost/: __init__.py  alerts.py  audit.py  auth.py  cli.py  config.py  context.py  data_loading.py  data_validation.py  dataset_registry.py  datasets.py  drift.py  environment.py  evaluation.py  experiment_tracking.py  health_monitor.py  inference.py  ingestion.py  logging.py  mcp_server.py  metadata_store.py  model_registry.py  observability.py  ollama_client.py  orchestration.py  planning.py  prediction_schemas.py  pytorch_ops.py  retraining.py  run_store.py  scheduler.py  schemas.py  serving.py  task_queue.py  tensorflow_ops.py  tool_catalog.py  training.py  web_console.py  workflows.py
src/ghost/webui/: app.js  index.html  styles.css
tests/: conftest.py
tests/architecture/: test_dataset_contract.py  test_orchestrator_contract.py  test_planning_contract.py  test_tool_catalog_contract.py
tests/integration/: test_mcp_routing.py  test_training_agent_runtime.py  test_web_console.py
tests/unit/: test_config.py  test_context.py  test_data_loading.py  test_data_validation.py  test_dataset_registry.py  test_datasets.py  test_evaluation.py  test_experiment_tracking.py  test_health_monitor.py  test_inference.py  test_ingestion.py  test_logging.py  test_metadata_store.py  test_model_registry.py  test_observability.py  test_ollama_client.py  test_orchestration.py  test_run_store.py  test_task_queue.py  test_tool_catalog.py  test_training.py  test_training_agent.py
