[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghost"
version = "1.0.0"
description = "AI Model Context & Training Platform with PyTorch, TensorFlow, MCP, and Ollama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "McGill Software" }
]
keywords = ["ml", "machine-learning", "pytorch", "tensorflow", "mcp", "ollama", "ai", "training"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.0.0",
    "tensorflow>=2.15.0",
    "mcp>=1.0.0",
    "ollama>=0.3.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
ghost = "ghost.mcp_server:main"
ghost-agent = "agents.training_agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ghost"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/ghost"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

# ---------------------------------------------------------------------------
# ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line-length handled by formatter

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = ["src/ghost"]
